# TestFramework

./: CMakeLists.txt  MiniTestFramework.h  TestHelpers.h  _clang-format  assertions.h  is_streamable.h  stream_any.h  streamfortestoutput.h  testfailure.h
testframework/: MiniTestFramework.h  TestHelpers.h  assertions.h  stream_any.h  streamfortestoutput.h  testfailure.h  testmain.inl
tests/: assertiontests.cpp  main.cpp  stream_any_tests.cpp  testfailuretests.cpp
